--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment Form Example</title>
+    <title>Payment Form</title>
     <!-- Bootstrap CSS -->
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-    >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="container mt-5">
         <div class="card">
@@ -21,41 +23,25 @@
                 <div class="alert alert-danger" role="alert">
                     Some fields are missing
                 </div>
+
                 <!-- Form starts here -->
                 <form>
                     <!-- Card details -->
                     <div class="row mb-3">
                         <div class="col-md-4">
                             <label for="cardNumber" class="form-label">Card #</label>
-                            <input
-                                type="text"
-                                class="form-control"
-                                id="cardNumber"
-                                placeholder="XXXXXXXXXXXXXXXX"
-                                required
-                            >
+                            <input type="text" class="form-control" id="cardNumber" placeholder="XXXXXXXXXXXXXXXX"
+                                required>
                         </div>
                         <div class="col-md-4">
                             <label for="cvc" class="form-label">CVC #</label>
-                            <input
-                                type="text"
-                                class="form-control"
-                                id="cvc"
-                                placeholder="0000"
-                                required
-                            >
+                            <input type="text" class="form-control" id="cvc" placeholder="0000" required>
                         </div>
                         <div class="col-md-4">
                             <label for="amount" class="form-label">Amount</label>
                             <div class="input-group">
                                 <span class="input-group-text">$</span>
-                                <input
-                                    type="text"
-                                    class="form-control"
-                                    id="amount"
-                                    placeholder="Amount"
-                                    required
-                                >
+                                <input type="text" class="form-control" id="amount" placeholder="Amount" required>
                             </div>
                         </div>
                     </div>
@@ -64,98 +50,86 @@
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <label for="firstName" class="form-label">First Name</label>
-                            <input
-                                type="text"
-                                class="form-control"
-                                id="firstName"
-                                required
-                            >
+                            <input type="text" class="form-control" id="firstName" required>
                         </div>
                         <div class="col-md-6">
                             <label for="lastName" class="form-label">Last Name</label>
-                            <input
-                                type="text"
-                                class="form-control"
-                                id="lastName"
-                                required
-                            >
+                            <input type="text" class="form-control" id="lastName" required>
                         </div>
                     </div>
 
                     <!-- Address details -->
                     <div class="row mb-3">
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <label for="city" class="form-label">City</label>
-                            <input
-                                type="text"
-                                class="form-control"
-                                id="city"
-                                required
-                            >
+                            <input type="text" class="form-control" id="city" required>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <label for="state" class="form-label">State</label>
-                            <select
-                                id="state"
-                                class="form-select"
-                                required
-                            >
+                            <select id="state" class="form-select" required>
                                 <option selected disabled>Pick a state</option>
                                 <option>California</option>
                                 <option>New York</option>
                                 <option>Texas</option>
                             </select>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <label for="postalCode" class="form-label">Postal Code</label>
-                            <input
-                                type="text"
-                                class="form-control"
-                                id="postalCode"
-                                required
-                            >
+                            <input type="text" class="form-control" id="postalCode" required>
                         </div>
                     </div>
 
                     <!-- We accept section -->
-                    <div class="mb-3">
-                        <label class="form-label">We accept:</label>
-                        <div>
-                            <img
-                                src="https://via.placeholder.com/40x25"
-                                alt="Visa"
-                                class="me-2"
-                            >
-                            <img
-                                src="https://via.placeholder.com/40x25"
-                                alt="MasterCard"
-                                class="me-2"
-                            >
-                            <img
-                                src="https://via.placeholder.com/40x25"
-                                alt="Discover"
-                                class="me-2"
-                            >
-                            <img
-                                src="https://via.placeholder.com/40x25"
-                                alt="American Express"
-                            >
+                    <div class="row mb-3 d-flex justify-content-between">
+                        <div class="col-md-3">
+                            <label class="form-label">We accept:</label>
+                            <div class="p-3" style="background-color: #6c757d; border-radius: 5px;">
+                                <div class="d-flex align-items-center gap-1 justify-content-around">
+                                    <!-- First Icon -->
+                                    <div class="d-flex align-items-center">
+                                        <input type="radio" name="paymentMethod" id="option1" value="Option1">
+                                        <label for="option1" class="ms-2 text-white">
+                                            <i class="bi bi-credit-card"></i>
+                                        </label>
+                                    </div>
+                                    <!-- Second Icon -->
+                                    <div class="d-flex align-items-center">
+                                        <input type="radio" name="paymentMethod" id="option2" value="Option2">
+                                        <label for="option2" class="ms-2 text-white">
+                                            <i class="bi bi-credit-card-2-back-fill"></i>
+                                        </label>
+                                    </div>
+                                    <!-- Third Icon -->
+                                    <div class="d-flex align-items-center">
+                                        <input type="radio" name="paymentMethod" id="option3" value="Option3">
+                                        <label for="option3" class="ms-2 text-white">
+                                            <i class="bi bi-credit-card-2-front"></i>
+                                        </label>
+                                    </div>
+                                    <!-- Fourth Icon -->
+                                    <div class="d-flex align-items-center">
+                                        <input type="radio" name="paymentMethod" id="option4" value="Option4">
+                                        <label for="option4" class="ms-2 text-white">
+                                            <i class="bi bi-credit-card-2-front-fill"></i>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Message -->
+
+                        <div class="col-md-6">
+                            <label for="message" class="form-label">Message</label>
+                            <textarea class="form-control" id="message" rows="3"
+                                placeholder="Add any notes here."></textarea>
                         </div>
                     </div>
 
-                    <!-- Message -->
-                    <div class="mb-3">
-                        <label for="message" class="form-label">Message</label>
-                        <textarea
-                            class="form-control"
-                            id="message"
-                            rows="3"
-                            placeholder="Add any notes here."
-                        ></textarea>
-                    </div>
+
 
                     <!-- Buttons -->
-                    <div class="d-flex justify-content-between">
+                    <div class="d-flex justify-content-end gap-2">
                         <button type="button" class="btn btn-secondary">Cancel</button>
                         <button type="submit" class="btn btn-primary">Send</button>
                     </div>
@@ -164,9 +138,8 @@
         </div>
     </div>
 
-    <!-- Bootstrap JS Bundle with Popper -->
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    ></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
